# p2r

./: Cargo.toml  README.md  pinboard-bookmarks.csv
.github/workflows/: build-status.yml
src/: main.rs
